--- a/schumann/static/css/style.css
+++ b/schumann/static/css/style.css
@@ -199,12 +199,39 @@ div.full-width-section div h2 {
     object-fit: cover; /* Ensure appropriate aspect ratio handling */
 }
 
-.recent-projects-section .btn-primary {
-    border-radius: 5px; /* Add a slight border-radius */
-    text-transform: uppercase; /* Make text all uppercase */
-    background-color: #002842; /* Dark blue color */
-    border-color: #002842; /* Ensure border matches the background */
+.btn-primary {
+    border-radius: 5px;
+    text-transform: uppercase;
+    background-color: #002842;
+    border-color: #002842;
+    color: white;
+    transition: all 0.3s ease;
 }
+
+.btn-primary:hover, .btn-primary:focus {
+    background-color: white;
+    border-color: white;
+    color: #002842;
+    outline: 2px solid #002842;
+    outline-offset: -2px;
+}
+
+.project-navigation {
+    margin: 2rem 0;
+}
+
+.nav-arrow {
+    font-size: 1.5rem;
+    color: #002842;
+    text-decoration: none;
+    padding: 0.5rem;
+    transition: color 0.3s ease;
+}
+
+.nav-arrow:hover, .nav-arrow:focus {
+    color: #004974; /* A slightly lighter shade for hover */
+}
+
 .projects-header {
     padding: 20px 0;
     background-color: #f0f0f0;
@@ -223,6 +250,33 @@ div.full-width-section div h2 {
     margin-top: 5px;
 }
 
+.project-details .detail-item {
+    margin-bottom: 10px;
+}
+
+.project-details label {
+    display: block;
+    margin-bottom: 0px;
+}
+
+.project-details span {
+    display: block;
+}
+.project-navigation {
+    margin: 2rem 0;
+}
+
+.project-navigation .btn {
+    min-width: 44px;  /* Ensures buttons are easy to tap on mobile */
+}
+
+.prev-project .btn i {
+    margin-right: 0.5rem;
+}
+
+.next-project .btn i {
+    margin-left: 0.5rem;
+}
 .testimonial {
     background-color: #333333;
     color: white;
