--- a/schumann/templates/index.html
+++ b/schumann/templates/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schumann Project</title>
-    <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
     <header class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="navbar-nav mx-auto">
-                <a class="nav-item nav-link" href="#">Project Management</a>
+                <a class="nav-item nav-link" href="/">Project Management</a>
                 <a class="nav-item nav-link" href="/projects">Projects</a>
-                <a class="nav-item nav-link" href="#">About</a>
-                <a class="nav-item nav-link" href="#">Contact</a>
+                <a class="nav-item nav-link" href="/about">About</a>
+                <a class="nav-item nav-link" href="/contact">Contact</a>
             </div>
         </nav>
     </header>
