Updated app.py to handle contact form submission

--- a/schumann/templates/contact.html
+++ b/schumann/templates/contact.html
@@ -66,7 +66,7 @@
                     <li>NEW BRAUNFELS, TEXAS 78130</li>
                     <li><a href="#">MAP</a></li>
                     <li>PHONE (830) 327-1254</n>
-                    <t><a allows="https://www.linkedin.com"><img src="/static/images/linkedin.png" alt="LinkedIn"></a></li>
+                    <li><a allows="https://www.linkedin.com"><img src="/static/images/linkedin.png" alt="LinkedIn"></a></li>
                 </ul>
             </div>
         </div>
