--- a/schumann/templates/about.html
+++ b/schumann/templates/about.html
@@ -26,7 +26,14 @@
             <p>Meet Schuman Consulting</p>
         </div>
     </section>
-
+    <div class="container mt-3 mb-5 breadcrumb-container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item gotham-bold"><a href="/">Home</a></li>
+                <li class="breadcrumb-item gotham-bold">About Us</li>
+            </ol>
+        </nav>
+    </div>
     <div class="container mt-5 mb-5">
         <div class="row">
             <div class="col-12">
