--- a/schumann/templates/project-detail.html
+++ b/schumann/templates/project-detail.html
@@ -26,6 +26,15 @@
                 <p>{{ project.summary }}</p>
             </div>
         </section>
+        <div class="container mt-3 mb-5 breadcrumb-container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item gotham-bold"><a href="/">Home</a></li>
+                    <li class="breadcrumb-item gotham-bold"><a href="/projects">Projects</a></li>
+                    <li class="breadcrumb-item active gotham-bold" aria-current="page">{{ project.project_title }}</li>
+                </ol>
+            </nav>
+        </div>
         <div class="container mt-5 mb-5">
             <div class="row">
                 <div class="col-md-6 mb-4">
